--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "0.0.0-experimental-3dc41d8a2-20211223",
-    "react-dom": "0.0.0-experimental-3dc41d8a2-20211223"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
